Text overflow ellipsis wrong color when using webkit-text-fill-color https://bugs.webkit.org/show_bug.cgi?id=54841

Reviewed by David Hyatt.

Source/WebCore:

Take -webkit-text-fill-color into account for ellipsis painting.

Test: fast/css/text-overflow-ellipsis-color.html

* rendering/EllipsisBox.cpp:
(WebCore::EllipsisBox::paint):

LayoutTests:

Add reftest for using -webkit-text-fill-color in combination with text-overflow:ellipsis.

* fast/css/text-overflow-ellipsis-color-expected.html: Added.
* fast/css/text-overflow-ellipsis-color.html: Added.

Canonical link: https://commits.webkit.org/129597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144542 268f45cc-cd09-0410-ab3c-d52691b4dbfc